# SearchEngine

./: .gitmodules  CMakeLists.txt  README.md  StopWordList.txt  config.ini  main.cpp  sql.txt
include/: Config.h  Exception.h  GumboAPI.h  HttpTool.h  README.md  SQL_database.h  SearchEngine.h  Stemming.h  StopWord.h  documentation.md  server.hpp
src/: CMakeLists.txt  Config.cpp  GumboAPI.cpp  HttpTool.cpp  SQL_database.cpp  SearchEngine.cpp  Stemming.cpp  StopWord.cpp  main.cpp
